stage0/tests/snapshots/actor_ir__fibonacci_worker.snap
---
source: tests/fixtures.rs
expression: contents
---
ActorIrProgram {
    actors: [
        ActorIrActor {
            id: 0,
            frame: ActorFrameLayout {
                size_bytes: 8,
                align: 8,
                slots: [],
                captures: [],
            },
            states: [
                ActorFrameState {
                    op: Receive {
                        arms: [
                            LambdaReceiveArm {
                                pattern: Bind {
                                    binding: BindingKey(
                                        "msg$0",
                                    ),
                                    type_: Unknown,
                                },
                                body: Call {
                                    callee: [
                                        "dbg",
                                    ],
                                    args: [
                                        Local(
                                            BindingKey(
                                                "msg$0",
                                            ),
                                        ),
                                    ],
                                    arg_types: [
                                        Var(
                                            TypeVarName(
                                                "'t31",
                                            ),
                                        ),
                                    ],
                                    result: Unit,
                                },
                            },
                        ],
                    },
                    next: Done,
                },
            ],
        },
        ActorIrActor {
            id: 1,
            frame: ActorFrameLayout {
                size_bytes: 16,
                align: 8,
                slots: [
                    ActorFrameSlot {
                        name: "out$1",
                        type_: ActorId,
                        field_index: 1,
                    },
                ],
                captures: [
                    ActorFrameSlot {
                        name: "out$1",
                        type_: ActorId,
                        field_index: 1,
                    },
                ],
            },
            states: [
                ActorFrameState {
                    op: Receive {
                        arms: [
                            LambdaReceiveArm {
                                pattern: Bind {
                                    binding: BindingKey(
                                        "start$2",
                                    ),
                                    type_: Unknown,
                                },
                                body: Call {
                                    callee: [
                                        "send",
                                    ],
                                    args: [
                                        Local(
                                            BindingKey(
                                                "out$1",
                                            ),
                                        ),
                                        Call {
                                            callee: [
                                                "fib",
                                            ],
                                            args: [
                                                Int(
                                                    6,
                                                ),
                                            ],
                                            arg_types: [
                                                I64,
                                            ],
                                            result: I64,
                                        },
                                    ],
                                    arg_types: [
                                        ActorId(
                                            I64,
                                        ),
                                        I64,
                                    ],
                                    result: Unit,
                                },
                            },
                        ],
                    },
                    next: Done,
                },
            ],
        },
    ],
}
